@@ -1,5 +1,8 @@
 2010-08-31  Henrik Sandklef  <hesa@sandklef.com>
 
+	* libxnee/test/test_feedback.c (test_setfeedback): 
+	Added return 0 at the end of the function body
+
 	* libxnee/test/test_all.c (test_all): 
 	Added return 0 at the end of the function body
 
